export interface Departamento {
    id?: number;
    sigla: string;
    descricao: string;
}