export interface Modelo {
    id?: number;
    numeracao: number;
    idMarca?: number; 
    marca?: string;   
}